--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -39,7 +39,7 @@ jobs:
             --build-arg BUILDKIT_INLINE_CACHE=1 \
             --cache-from ${{ env.IMAGE_NAME }}:latest \
             --platform ${{ env.PLATFORMS }} \
-            --target base \
+            --target app \
             --push \
             --tag ${{ env.IMAGE_NAME }}:$VERSION \
             --tag ${{ env.IMAGE_NAME }}:latest \
