--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,8 @@
 name: CI
 
 on:
+  schedule:
+    - cron: '0 11 * * *'
   push:
     branches:
       - main
@@ -31,25 +33,23 @@ jobs:
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
-      - name: Build and deploy docker image
+
+      - name: Build and deploy docker image with tag
+        if: startsWith(github.ref, 'refs/tags')
         run: |
           export VERSION=$(git describe --tags 2>/dev/null || echo '0.1.0')
-          echo $VERSION
-          docker buildx build \
-            --build-arg BUILDKIT_INLINE_CACHE=1 \
-            --cache-from ${{ env.IMAGE_NAME }}:latest \
-            --platform ${{ env.PLATFORMS }} \
-            --target base \
-            --push \
-            --tag ${{ env.IMAGE_NAME }}:$VERSION \
-            --tag ${{ env.IMAGE_NAME }}:latest \
-            .
-          docker buildx build \
-            --build-arg BUILDKIT_INLINE_CACHE=1 \
-            --cache-from ${{ env.IMAGE_NAME }}:latest \
-            --platform ${{ env.PLATFORMS }} \
-            --target debug \
-            --push \
-            --tag ${{ env.IMAGE_NAME }}:$VERSION-debug \
-            --tag ${{ env.IMAGE_NAME }}:debug \
-            .
+          echo ${VERSION}
+          make build-and-push TAG=${VERSION} TARGET=base
+          make build-and-push TAG=${VERSION}-debug TARGET=debug
+
+      - name: Build and deploy docker image
+        run: |
+          export KUBECTL_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt)
+          export HELM_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s helm/helm | cut -c2-)
+          export HELMFILE_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s roboll/helmfile | cut -c2-)
+          export K9S_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s derailed/k9s | cut -c2-)
+          export EXTRA_ARGS='--build-arg="KUBECTL_VERSION=${KUBECTL_VERSION}" --build-arg="HELM_VERSION=${HELM_VERSION}" --build-arg="HELMFILE_VERSION=${HELMFILE_VERSION}" --build-arg="K9S_VERSION=${K9S_VERSION}"'
+          echo ${EXTRA_ARGS}
+          make build-and-push TAG=latest TARGET=base 
+          make build-and-push TAG=debug TARGET=debug
+        
