--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -44,12 +44,11 @@ jobs:
 
       - name: Build and deploy docker image
         run: |
-          export KUBECTL_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt)
+          export KUBECTL_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt | cut -c2-)
           export HELM_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s helm/helm | cut -c2-)
           export HELMFILE_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s roboll/helmfile | cut -c2-)
           export K9S_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s derailed/k9s | cut -c2-)
           export EXTRA_ARGS='--build-arg="KUBECTL_VERSION=${KUBECTL_VERSION}" --build-arg="HELM_VERSION=${HELM_VERSION}" --build-arg="HELMFILE_VERSION=${HELMFILE_VERSION}" --build-arg="K9S_VERSION=${K9S_VERSION}"'
-          echo ${EXTRA_ARGS}
           make build-and-push TAG=latest TARGET=base 
           make build-and-push TAG=debug TARGET=debug
         
