--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,7 +34,13 @@ jobs:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
 
-      - name: Build and deploy docker image
+      - name: Build and deploy latest images
+        if: contains(github.ref, 'main')
+        run: |
+          make build-and-push TAG=latest TARGET=base 
+          make build-and-push TAG=debug TARGET=debug
+
+      - name: Build and deploy nightly images
         if: contains(github.ref, 'main')
         run: |
           export KUBECTL_VERSION=$(curl -L -s https://dl.k8s.io/release/stable.txt | cut -c2-)
@@ -42,14 +48,13 @@ jobs:
           export HELMFILE_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s helmfile/helmfile | cut -c2-)
           export K9S_VERSION=$(curl -s https://scripts.zer0.hu/lv | sh -s derailed/k9s | cut -c2-)
           export EXTRA_ARGS='--build-arg="KUBECTL_VERSION=${KUBECTL_VERSION}" --build-arg="HELM_VERSION=${HELM_VERSION}" --build-arg="HELMFILE_VERSION=${HELMFILE_VERSION}" --build-arg="K9S_VERSION=${K9S_VERSION}"'
-          make build-and-push TAG=latest TARGET=base 
-          make build-and-push TAG=debug TARGET=debug
+          make build-and-push TAG=nightly TARGET=base 
+          make build-and-push TAG=nightly-debug TARGET=debug
 
-      - name: Build and deploy docker image with tag
+      - name: Build and deploy version tagged images
         if: startsWith(github.ref, 'refs/tags')
         run: |
           export VERSION=$(git describe --tags 2>/dev/null || echo '0.1.0')
           echo ${VERSION}
           make build-and-push TAG=${VERSION} TARGET=base
           make build-and-push TAG=${VERSION}-debug TARGET=debug
-        
